<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wear Commands (Telefon)</string>
    <string name="title">Telefon &#8596; Saat komut kontrolu</string>

    <string name="setup_title">Kurulum</string>
    <string name="btn_pair">Eşleştir (saatteki QR\'ı tara)</string>
    <string name="btn_permissions">Izinleri ver (kamera, mikrofon, konum, bildirim)</string>
    <string name="btn_admin">Cihaz yoneticisini etkinlestir (kilit/sil)</string>
    <string name="btn_battery">Pil optimizasyonundan haric tut</string>
    <string name="btn_screen">Ekran izni (goruntu almak icin)</string>
    <string name="btn_overlay">Ustte gosterme izni (kilitliyken selfie)</string>
    <string name="btn_pin">Veri silme PIN\'i ayarla</string>

    <string name="test_title">Test (saate gonder)</string>
    <string name="hint_command">Ozel komut yaz (or. HELLO)</string>
    <string name="btn_send_ping">PING gonder</string>
    <string name="btn_send_vibrate">Saati titret (VIBRATE)</string>
    <string name="btn_send_custom">Ozel komutu gonder</string>

    <string name="log_title">Gelen / giden komutlar</string>
    <string name="log_empty">Henuz komut yok.</string>
</resources>
